Post delete handling, fixes some bugs, navigation labels are now visible

--- a/src/components/Homepage/NavPanel.module.css
+++ b/src/components/Homepage/NavPanel.module.css
@@ -21,12 +21,45 @@
   gap: 4.2rem;
 }
 
-.nav span {
+.nav li {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.2rem;
+  width: 100%;
+}
+
+.icon {
   transition: color, transform 0.2s;
 }
 
-.nav span:hover {
+.icon:hover {
   cursor: pointer;
   color: #777;
   transform: scale(1.25);
 }
+
+.label {
+  opacity: 0;
+
+  position: absolute;
+  top: 50%;
+  left: 150%;
+
+  transform: translateY(-50%);
+
+  font-size: 1.4rem;
+  font-weight: 500;
+  background: transparent;
+
+  transition: opacity 0.2s;
+}
+
+li:hover .label {
+  opacity: 1;
+}
+
+/* .nav:hover .label {
+  display: block;
+} */
